hdf5-derive/tests/compile-fail/pd-empty-tuple-struct.stderr
error: proc-macro derive panicked
 --> $DIR/pd-empty-tuple-struct.rs:6:10
  |
6 | #[derive(H5Type)]
  |          ^^^^^^
  |
  = help: message: Cannot derive H5Type for empty tuple structs
